# Pharmagen

./: .aiexclude  .gitattributes  .gitignore  .notes  =5.28.0  CODE_OF_CONDUCT.md  Create_VENV.py  Devices.txt  Drug_Compount_processed.tsv  Estructura de trabajo.txt  LICENSE  OPTIMIZATIONS_README.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  Pharmagen.code-workspace  README.md  Tree.txt  averk.py  bsur.py  checker.py  comprobacion.txt  comprobacion_weights  conj_auton.txt  conj_auton_clean.txt  conj_auton_expanded.txt  conversor_se.py  create_final_df.py  debug_utils.py  dict_therapeutic_outcome_cp.json  drug_names.txt  effect_missing.txt  effect_subcat_dict.json  estructura.txt  extra_pmids.txt  farmagene_grapher.py  filled_train_therapeutic_outcome_cleaned.csv  geno_alleles_dict2.json  genotype_allele_equivalences.json  genotype_empty_labels.json  (+45 more)
.env_pharmagen/: pyvenv.cfg  requirements.txt
.env_pharmagen/Scripts/: activate  activate.bat
Anacronico/: Lib - Acceso directo.lnk  __init__.py  gene.fasta
Anacronico/scripts/: Pre_requirements.py  Procesado_GenomaVIH.py  __init__.py  viral_mutations_script.py
Anacronico/src/: funciones.py
BACKUPS/: ATC_completo_ESP - backup.csv  ATC_drug_dict_ENG.json  ATC_drug_dict_ESP.json  ATC_farmaco(ENG_dict).json  ATC_farmaco_ESP.json  ATC_farmaco_ESP_corregido.json  backup_train.csv  combis_effects.txt  compression_csv.py  data_fil.csv  dict_therapeutic_outcome.json  drug_gene_output.csv  entity_name_dict.txt  limpieza.py  merge_and_filter.py  process_raw_data.py  script.py  train_base_therapeutic.csv  train_base_therapeutic_limpio.csv  var_drug_ann_model.csv  var_drug_ann_with_ATC.csv  var_fa_ann_long.csv  var_fa_ann_with_ATC.csv  var_pheno_ann_with_ATC.csv
Environment_Scripts/: Create_CONDA_ENV.py  Create_VENV.py
Pharmagen/: __init__.py  config.json  config.py  main.py  process_raw_data.py
Pharmagen/cache/: paths.json
Pharmagen/scripts/: __init__.py  genoma_humano_process.py  mutations_extraction.py  setup_project.py
Pharmagen/src/: __init__.py  funciones.py  logger_config.py  project_config.py  utils.py
TEST/: ATC_drug_dict_ENG.json  checker.py  dict_therapeutic_outcome.json
config/: models.toml  paths.toml
data/dicts/: ATC_drug_med.json  drug_gene_output_vocab.json  drug_list.txt  kuka.py  tomli_ATC_drug_med.toml
data/legacy/: final_mapped_data.tsv
data/processed/: final_training_data.tsv  gene.fasta
data/raw/: gene.fasta
docs/: GETTING_STARTED.md  PROJECT_STRUCTURE.md
genes/: phenotypes.csv  variants.csv
logs/: log_09-10-2025.txt  log_19-11-2025.txt  log_20-11-2025.txt  log_24-10-2025.txt  log_26-10-2025.txt  log_28-10-2025.txt  log_31-10-2025.txt
optuna_outputs/: optuna_Effect-Entity.json  optuna_Outcome-Effect-Subcat-Entity.json  optuna_Outcome-Effect-Subcat-Entity.txt  optuna_Outcome-Effect-Subcat.json  optuna_Outcome-Effect-Subcat.txt  optuna_Outcome-Effect.json  optuna_Outcome-Effect.txt  optuna_Outcome-Variation copy.json  optuna_Outcome-Variation-Effect.json  optuna_Outcome-Variation-Effect.txt  optuna_Outcome-Variation.json  optuna_Outcome-Variation.txt  optuna_Phenotype_Effect_Outcome_05_11_25__08_00.json  optuna_Phenotype_Effect_Outcome_05_11_25__08_00.txt  optuna_Phenotype_Effect_Outcome_05_11_25__11_08.json  optuna_Phenotype_Effect_Outcome_05_11_25__11_08.txt  optuna_Phenotype_Effect_Outcome_09_11_25__13_46.txt  optuna_Phenotype_Effect_Outcome_10_11_25__15_17.json  optuna_Variation-Effect.json  optuna_optuna_Phenotype_Outcome_31_10_25__02_36.json  optuna_optuna_Phenotype_Outcome_31_10_25__02_36.txt  optuna_optuna_Phenotype_Outcome_31_10_25__03_24.json  optuna_optuna_Phenotype_Outcome_31_10_25__03_24.txt
pgen_model/: README  __init__.py  __main__.py  build_weight_matrix.py  class_Model.py  data.py  drug_gene_edges.tsv  focal_loss.py  isolate.py  kg2_douve.py  kge.py  kge_test.py  main.py  metrics.py  metrics_models.py  model.py  model_Effect-Entity.py  model_configs.py  optuna_models_trials.py  optuna_train.py  pgen_model copy.py  pgen_pipeline.py  pipeline.py  pmodel_outcome-variation.py  predict.py  randomizer_predictors.py  save_reports.py  train.py
relationships/: drugLabels.byGene.csv  drugLabels.byGene.tsv  drugLabels.csv  drugLabels.tsv
reports/: PGenModel_history.json  PGenModel_report.html  Pheno-Dir-Effect_final_config.json  Pheno-Dir-Effect_history.json  Pheno-Dir-Effect_report.html  Pheno-Dir-Effect_study_best.json  Pheno_Dir_Eff_LAST_best.json  optuna_study.db  report_Features-Phenotype_0.39757.txt
results/: predicciones.txt  training_report_ATC_Phenotype_Effect_Outcome_7.0826.txt  training_report_Features-Phenotype_0.3976.txt  training_report_Outcome-Effect-Subcat_0.2886.txt  training_report_Outcome-Effect_0.3271.txt  training_report_Phenotype_Effect_Outcome_0.7048.txt  training_report_Phenotype_Effect_Outcome_1.7317.txt  training_report_Phenotype_Effect_Outcome_10.2749.txt  training_report_Phenotype_Effect_Outcome_2.7921.txt  training_report_Phenotype_Effect_Outcome_2.9308.txt  training_report_Phenotype_Effect_Outcome_3.156.txt  training_report_Phenotype_Effect_Outcome_3.1718.txt  training_report_Phenotype_Effect_Outcome_3.1798.txt  training_report_Phenotype_Effect_Outcome_6.4874.txt
scripts/: init_env.py
src/: __init__.py  build_weight_matrix.py  data.py  data_handler.py  factories.py  graph_modeling.py  loss_functions.py  losses.py  model.py  modeling.py  modeling_graph.py  optuna_train.py  optuna_tuner.py  performance_monitor.py  pipeline.py  pre_train_emb.py  predict.py  rs_validation.py  train.py  trainer.py  utils.py
test/: monitor_benchmark.py  test_config.py  test_data.py  test_model.py  test_pipeline.py  test_predict.py
tests/: conftest.py  test_data.py  test_labels.py  test_losses.py  test_modeling.py  test_performance_optimizations.py
train_data/: checker.py  final_enriched_data.tsv  relationships_associated_corrected_mapped.tsv  test.json
trcsv/: train_merged.csv  train_therapeutic_outcome_with_effect_type.csv  train_therapeutic_outcome_with_variation.csv
venv_utils/: Create_CONDA_ENV.py  Create_VENV.py
(+29894 files in other folders)
