[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pharmagen"
version = "1.0-rc1"
description = "Software de predicción farmacogenética y eficacia terapéutica mediante Deep Learning."
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = { file = "LICENSE" }
authors = [{ name = "Adrim Hamed Outmani", email = "adrimh.outmani@gmail.com" }]

keywords = [
  # Dominio Médico/Farmacéutico
  "pharmacogenetics",
  "pharmacogenomics",
  "precision-medicine",
  "drug-response-prediction",
  "clinical-decision-support",
  "pharmacy",
  "adverse-drug-events",

  # Tecnología / IA
  "deep-learning",
  "pytorch",
  "deepfm",
  "neural-networks",
  "artificial-intelligence",
  "optuna",

  # Bioinformática / Datos
  "bioinformatics",
  "genomics",
  "vcf-processing",
  "variant-analysis"
]

classifiers = [
  # Estado del proyecto
  "Development Status :: 4 - Beta",

  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",

  # Licencia 
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Lenguaje
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "Programming Language :: Unix Shell",

  # Temáticas Científicas
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",  # <--- Muy importante para ti

  # Entorno de Ejecución
  "Environment :: Console",  
  "Environment :: GPU :: NVIDIA CUDA",
  "Operating System :: OS Independent", # Preference Linux but also works on Windows. OSX not tested.
]

dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "biopython>=1.80",
  "tqdm>=4.66.0",
  "tomli>=2.0.1",
  "rapidfuzz>=3.0.0",
  "packaging>=23.0",
]

[project.optional-dependencies]
# Dependencias EXTRA para entrenamiento y optimización
# Se instalan con: pip install ".[train]"
train = ["optuna>=3.0.0", "matplotlib>=3.7.0"]

# Dependencias para desarrollo (formato, linting)
# Se instalan con: pip install ".[dev]"
dev = ["black", "isort", "mypy", "pytest"]

[project.urls]
"Homepage" = "https://github.com/Aderfi/pharmagen_pmodel"           # Opcional
"Bug Tracker" = "https://github.com/Aderfi/pharmagen_pmodel/issues" # Opcional

# =============================================================================
# CONFIGURACIÓN DE SETUPTOOLS (Layout src)
# =============================================================================
[tool.setuptools.packages.find]
where = ["src"] # Indica que el código fuente está dentro de la carpeta 'src'
include = ["*"] # Incluye todos los paquetes encontrados dentro de src

# =============================================================================
# CONFIGURACIÓN DE HERRAMIENTAS DE CALIDAD DE CÓDIGO
# =============================================================================

# Configuración para Black
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

# Configuración para Isort
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]

# Configuración para Mypy 
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
