[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pharmagen"
version = "1.0-rc1"
description = "Software de predicción farmacogenética y eficacia terapéutica mediante Deep Learning."
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = { file = "LICENSE" }
authors = [{ name = "Adrim Hamed Outmani", email = "adrimh.outmani@gmail.com" }]

keywords = [
  "pharmacogenetics", "pharmacogenomics", "precision-medicine",
  "deep-learning", "pytorch", "deepfm", "bioinformatics"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
  "torch>=2.10.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "biopython>=1.80",
  "tqdm>=4.66.0",
  "tomli>=2.0.1",
  "rapidfuzz>=3.0.0",
  "packaging>=23.0",
]

[project.optional-dependencies]
train = ["optuna>=3.0.0", "matplotlib>=3.7.0"]
dev = ["ruff", "mypy", "pytest"]  # Reemplazado black/isort por ruff

[project.urls]
Homepage = "https://github.com/Aderfi/pharmagen_pmodel"
"Bug Tracker" = "https://github.com/Aderfi/pharmagen_pmodel/issues"

# =============================================================================
# SETUPTOOLS
# =============================================================================
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# =============================================================================
# RUFF 
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

# Exclusiones estándar
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Reglas habilitadas:
# E: pycodestyle errors
# F: Pyflakes
# I: isort 
# N: pep8-naming
# UP: pyupgrade
# B: flake8-bugbear
# A: flake8-builtins 
select = ["E", "F", "I", "N", "UP", "B", "A"]

# Reglas ignoradas
ignore = ["E501"]

# Configuración de isort dentro de Ruff
[tool.ruff.lint.isort]
known-first-party = ["src"]

# Configuración de formato (estilo Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY (Tipado Estático)
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
