[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pharmagen"
version = "1.0-rc1"
description = "Software de predicción farmacogenética y eficacia terapéutica mediante Deep Learning."
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = { file = "LICENSE" }
authors = [{ name = "Adrim Hamed Outmani", email = "adrimh.outmani@gmail.com" }]

keywords = [
  "pharmacogenetics", "pharmacogenomics", "precision-medicine",
  "deep-learning", "pytorch", "deepfm", "bioinformatics"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
  "torch>=2.10.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "biopython>=1.84",
  "tqdm>=4.66.0",
  "tomli>=2.0.2",
  "rapidfuzz>=3.9.0",
  "packaging>=24.0",
]

[project.optional-dependencies]
train = [
  "optuna>=3.6.0",
  "matplotlib>=3.9.0",
]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Aderfi/pharmagen_pmodel"
"Bug Tracker" = "https://github.com/Aderfi/pharmagen_pmodel/issues"

# =============================================================================
# SETUPTOOLS
# =============================================================================
[tool.setuptools.packages.find]
where   = ["src"]
include = ["pharmagen*"]

# =============================================================================
# RUFF 
# =============================================================================
[tool.ruff]

target-version = "py310"
line-length    = 100

exclude = [
  ".git",
  ".venv",
  ".env_pgen",            
  "__pycache__",
  "dist",
  "build",
  "*.egg-info",
  "train_data",           
  "src/pharmagen/model/encoders",  
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "UP",   # pyupgrade — sintaxis moderna Python 3.10+
  "B",    # flake8-bugbear
  "N",    # pep8-naming
  "A",    # flake8-builtins
  "I",    # isort
  "TID",  # flake8-tidy-imports
  "C4",   # flake8-comprehensions
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "NPY",  # numpy deprecations
  "PD",   # pandas-vet
  "PT",   # flake8-pytest-style
  "RUF",  # reglas propias de Ruff
]

ignore = [
  "E501",   # line too long — lo gestiona ruff format
  "S301",   # pickle — inevitable con joblib/torch.load y tus .pkl
  "S311",   # pseudo-random — OK para shuffle de datos
  "RET504", # variable intermedia antes de return
  "B008",   # function call in default arg — habitual en configs ML
  "N803",   # arg lowercase — genes/SNPs van en mayúsculas (CYP2D6, VKORC1…)
  "N806",   # variable lowercase — idem
  "RUF003",
  "N812",
]

fixable   = ["ALL"]
unfixable = ["F401", "F811"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+_*))$"

[tool.ruff.lint.isort]
known-first-party = ["pharmagen"]
known-third-party = [
  "torch", "numpy", "pandas", "sklearn",
  "Bio", "biopython",
  "optuna", "tqdm", "joblib",
  "rapidfuzz", "packaging", "matplotlib",
]
force-sort-within-sections = true
split-on-trailing-comma    = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN", "PT", "N"]
# entrenamiento — print() permitido para logging rápido
"src/pharmagen/model/engine/*.py" = ["S301", "T20"]
"train_data/**/*.py" = ["S", "ANN", "T20"]
# Análisis NGS — nomenclatura bioinformática (genes, SNPs, alelos)
"src/pharmagen/analysis/*.py" = ["N803", "N806", "N802"]
# __init__.py — re-exports públicos sin falso warning
"**/__init__.py" = ["F401", "F403"]
"src/pharmagen/cfg/manager.py" = ["S", "F401"]

[tool.pyright]
typeCheckingMode = "off"

[tool.mypy]
python_version        = "3.10"
warn_return_any       = true
warn_unused_configs   = true
warn_unused_ignores   = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "Bio.*",
  "optuna.*",
  "rapidfuzz.*",
  "joblib.*",
  "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short --strict-markers"
markers   = [
  "slow: tests de entrenamiento o que requieren GPU",
  "unit: tests unitarios rápidos",
  "integration: tests de integración del pipeline completo",
]